2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-18  Steve Chaplin

       * dialog.c (show_select_game_dialog): Free memory when finished using
       it. Update the casting macros used when calling g_signal_connect().
       (select_rules): Free the old filename (if any) before getting the
       current filename.

2003-10-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* odessa.scm (game-over-helper): Altered the hint function so
	tableau reshuffling is preferred to building the
	foundation. i.e. bringing the hints into line with the recommended
	strategy in the documentation. Fixes bug #51694.

2003-10-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c (create_press_data): Initialise the press_data structure
	to zero so we can correctly detect when we haven't actually
	allocated sub-components. Fixes bug #123328.

2003-09-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* press_data.h:
	* press_data.c:
	* sol.c:
	* events.c: Clean up the fix for bug #121762.

2003-09-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c (new_game): Explicitly discard any stacks of cards we may
	be dragging at the time of a new game. Fixes the symptoms of bug
	#121762.

2003-07-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.h: 
	* sol.c: Fix compiler warnings. 

	* menu.c (help_about_callback): Use g_str* functions rather than
	string.h functions.

	* dialog.c (show_select_game_dialog): Fix a compiler warning. It's
	a bit ugly though.

2003-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* freecell.desktop.in: 
	* sol.desktop.in: Update name to fit HIG (bug 116916).

2003-07-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* splash.c (splash_new): Connect our expose callback as an "after"
	signal to let the normal drawing routines do their thing.
