@@ -1,3 +1,8 @@
+2003-10-27  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* gdk-card-image.c (gdk_card_deck_new): Applied a patch from Mark
+	Schreiber to catch the case where the card images are missing.
+
 2003-07-26  Steve Chaplin
 
 	* Makefile.am: Remove trailing '/' on directories so we install to 
