@@ -1,3 +1,8 @@
+2003-10-27  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* src/prefs.c: A patch from Steve Chaplin to replace deprecated
+	casting macros.
+
 2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* data/Makefile.am (install-data-local): Change the way gconf files are
