@@ -1,3 +1,8 @@
+2003-10-27  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* card.c (load_pixmaps): Applied a patch from Mark Schreiber to
+	catch the case where the card images are missing.
+
 2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* Makefile.am (install-data-local): Change the way gconf files are
